# TCDS-2024-Compare-Chaabouni2020-EGG

./: .gitignore  Chaabouni2020.bash  README.md  grid_Chaabouni2020.bash  pyproject.toml  requirements.txt  setup.bash
egg/core/: callbacks.py
egg/zoo/compo_vs_generalization/: intervention.py  tcds_data.py  train.py
