[tool.poetry]
name = "tcds-2024-compare-chaabouni2020-egg"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = ">=1.1.0"
torchvision = "^0.20.1"
scipy = "^1.14.1"
numpy = "^2.2.0"
pytest = "^8.3.4"
editdistance = "^0.8.1"
rich = "^13.9.4"
scikit-learn = "^1.6.0"
wandb = "^0.19.0"
submitit = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
